# vxe

./: Cargo.toml  LICENSE  README.md
vxe/: Cargo.toml
vxe-example/: Cargo.toml
vxe-example/src/: main.rs
vxe-renderer/: Cargo.toml
vxe-renderer/src/: lib.rs
vxe-renderer/src/context/: mod.rs  pipeline.rs  render.rs  tess.rs
vxe-renderer/src/data/: macros.rs  mod.rs
vxe/src/: lib.rs
vxe/src/context/: mod.rs
vxe/src/instance/: builder.rs  mod.rs
vxe/src/internal/instance/: mod.rs
vxe_engine/: Cargo.toml
vxe_engine/src/: lib.rs
vxe_engine/src/editor/: main.rs
vxe_engine/src/engine/: mod.rs
vxe_engine/src/engine/shader/: material.rs  mesh.rs  mod.rs
vxe_engine/src/engine/types/: drawable.rs  mesh.rs  mod.rs  parameter.rs
vxe_engine_example/: Cargo.toml
vxe_engine_example/src/: main.rs
vxe_example/: Cargo.toml
vxe_renderer/: Cargo.toml
vxe_renderer/src/: lib.rs
vxe_renderer/src/context/: mod.rs  pipeline.rs  render.rs  shader.rs  tess.rs
vxe_renderer/src/context/utils/: frame.rs  mod.rs  render.rs
vxe_renderer/src/data/: macros.rs  mod.rs
vxe_renderer/src/deferred/: mod.rs
vxe_renderer/src/deferred/light_pass/: final_pass.rs  mod.rs  shader.rs
vxe_renderer/src/deferred/pbr_material/: mod.rs  shader.rs
vxe_renderer/src/handler/: mod.rs
vxe_renderer/src/renderer/: builder.rs  mod.rs
vxe_renderer/src/types/: camera.rs  light.rs  material.rs  mesh.rs  mesh_shader.rs  mod.rs  parameter.rs  transform.rs
vxe_renderer_example/: Cargo.toml
vxe_renderer_example/src/: main.rs  material.rs  pass.rs  shader.rs
(+3 files in other folders)
