[package]
name = "vxe_renderer"
version = "0.1.0"
authors = ["TheJebForge <jeb@thejebforge.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "*"
luminance = "*"
luminance-gl = "*"
luminance-glfw = "*"
luminance-windowing = "*"
luminance-derive = "*"